--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ div.buttons {
 div.options {
     text-align: left !important;
     padding: 10px; 
+    width: 300px;
+    height: 150px;
+    margin: 0 auto;  
 }
 
 div.options label {
